--- a/index.html
+++ b/index.html
@@ -1,9 +1,111 @@
-<p>this is a test text</p>
+<p style="text-align:center"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Участвуйте в GeoConnect</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Что это такое?</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">GeoConnect - это соревнование по решению пространственных задач в бизнесе для гео-специалистов и аналитиков, дополненное встречами и лекциями.</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Кто мы?</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Среди нас - специалисты по Data Science, пространственному анализу и продакт менеджер, которых объединяет одно - мы любим геоаналитику и интересные задачи.</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Кто вы?</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Соревнование подойдёт:</span></span></span></p>
 
 <ul>
-	<li>askfdsdaf</li>
-	<li>asdldfkkjasdf</li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">ГИС-специалистам</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Дата-аналитикам</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Дата саентистам</span></span></span></li>
 </ul>
 
-<h2>asdfasdfdsadf</h2>
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Зачем мы это делаем?</strong></span></span></span></p>
+
+<ul>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">В бизнесе много интересных и сложных пространственных задач, выходящих за рамки классической аналитики. С другой стороны, есть сообщество геоспециалистов, которые умеют решать такие задачи. Поэтому мы придумали это соревнование - сделали так, чтобы эти две стороны встретились.</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Мы хотим поделиться тем, что делаем сами и интересуемся тем, что делаете вы.</span></span></span></li>
+</ul>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Что вас ждёт?</strong></span></span></span></p>
+
+<ul>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">пространственная задача крупного бизнеса</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">2 недели практического опыта, ценного для работодателей</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">мастер-классы по методам пространственной и бизнес-аналитики</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">возможность пообщаться с коллегами, которые интересуются темой гео или работают в ней</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">подтверждение своего участия, на которое вы можете сослаться в своём портфолио</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Поощрительные призы от партнёра</span></span></span></li>
+</ul>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Что за задача?</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Wildberries понимает, что уметь анализировать пространственные данные - важно, поэтому предлагает участникам исследовать проблему предсказания оборота точек на основе их локации.</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Что нужно делать?</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Вас ждёт 2 трека на выбор: дата-инсайты и Kaggle competition.</span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><u>Дата-инсайты</u></span></span></span><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">: если возможности строить ML-модели нет, а исследовательский интерес - есть, можно участвовать в соревновании на лучший пространственный дата-инсайт, который:</span></span></span></p>
+
+<ul>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">поможет компании узнать новые факторы, которые влияют на перформанс ПВЗ</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">проявит вас как специалиста, способного защитить своё решение перед бизнесом</span></span></span></li>
+</ul>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><u>Kaggle competition</u></span></span></span><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">: классическое ML-соревнование в точности предсказания оборота точек компании.</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Когда будет проходить соревнование?</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Даты проведения: 30 ноября (четверг) - 10 декабря (воскресенье).</span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Последний день регистрации - 20 ноября для трека дата-инсайтов и 29 ноября - для Kaggle competition.</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Будет ли отбор команд?</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Будет для трека с дата-инсайтами - для этого при регистрации нужно выполнить и приложить тестовое задание.</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Другие правила</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Ограничения по размеру команды нет - можно участвовать одному.</span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Участвовать не получится, если у вас есть готовый коммерческий продукт: мы хотели бы, чтобы решения разрабатывались с нуля.</span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Участвовать можно только в одном из треков.</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Я не нашёл ответа на свой вопрос</strong></span></span></span></p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">Напишите нам: [ссылка на чат соревнования]</span></span></span></p>
+
+<p>&nbsp;</p>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Хочу участвовать! Что делать?</strong></span></span></span></p>
+
+<ul>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">зарегистрироваться на свой трек (на слове &ldquo;зарегистриоваться&rdquo; - слайд даун до кнопок с регистрацией)</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">подписаться на канал &ldquo;О городах и данных&rdquo;[https://t.me/datainthecity] - там мы будем публиковать главные новости о соревновании</span></span></span></li>
+	<li style="list-style-type:disc"><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000">добавиться в чат соревнования [ссылки пока нет]</span></span></span></li>
+</ul>
+
+<p><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"><strong>Две кнопки: зарегистрироваться на трек &ldquo;дата-инсайты&rdquo;, зарегистрироваться на трек &ldquo;Kaggle competition&rdquo;</strong></span></span></span><span style="font-size:11pt"><span style="font-family:Arial,sans-serif"><span style="color:#000000"> (ведёт на разные гугл-формы - ссылок пока нет)</span></span></span></p>
+
+<h2>&nbsp;</h2>
 
