--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ document.addEventListener('DOMContentLoaded', t_setvisRecs);
 t_onFuncLoad('t396_init', function () {
 t396_init('665238395');
 });
-});</script><!-- /T396 --></div></div><!--/allrecords--><!-- Tilda copyright. Don't remove this line --><div class="t-tildalabel " id="tildacopy" data-tilda-sign="8121383#41143291"><a href="https://tilda.cc/?upm=8121383" class="t-tildalabel__link"><div class="t-tildalabel__wrapper"><div class="t-tildalabel__txtleft">Made on </div><div class="t-tildalabel__wrapimg"><img src="images/tildacopy.png" class="t-tildalabel__img" fetchpriority="low" alt=""></div><div class="t-tildalabel__txtright">Tilda</div></div></a></div><!-- Stat --><script type="text/javascript">if (! window.mainTracker) { window.mainTracker = 'tilda'; }
+});</script><!-- /T396 --></div></div><!-- Stat --><script type="text/javascript">if (! window.mainTracker) { window.mainTracker = 'tilda'; }
 window.tildastatcookie='no'; 
 setTimeout(function(){ (function (d, w, k, o, g) { var n=d.getElementsByTagName(o)[0],s=d.createElement(o),f=function(){n.parentNode.insertBefore(s,n);}; s.type = "text/javascript"; s.async = true; s.key = k; s.id = "tildastatscript"; s.src=g; if (w.opera=="[object Opera]") {d.addEventListener("DOMContentLoaded", f, false);} else { f(); } })(document, window, '281a617d30be307f4936bce5a17a3c17','script','js/tilda-stat-1.0.min.js');
 }, 2000); </script></body></html>
